Issue #19739: Try to fix compiler warnings on 32-bit Windows.